# godot

./: .gitmodules  AUTHORS  Makefile.am  autogen.sh  configure.ac  pkgs_install  pkgs_osx
core/io/: treecursion_types.cpp  treecursion_types.h
examples/: Makefile.am  skeleton-apply.c  skeleton-info.c
include/skeleton/: Makefile.am  skeleton.h  skeleton_constants.h  skeleton_query.h
modules/: SCsub
modules/concordantboards/: SCsub  concordant_board.cpp  concordant_board.h  config.py  register_types.cpp  register_types.h
modules/motion_sense/: SCsub  config.py  data_models.cpp  data_models.h  facial_landmark.cpp  facial_landmark.h  facial_landmark_loader.cpp  facial_landmark_loader.h  landmark_trainer.cpp  landmark_trainer.hpp  register_types.cpp  register_types.h  utils.cpp  utils.h
modules/mumble/: .gitignore  SCsub  callback.cpp  callback.h  config.py  mumble.cpp  mumble.h  register_types.cpp  register_types.h  utils.cpp  utils.h
modules/talkingtree/: .gitignore  SCsub  TalkingTree.pb.cc  TalkingTree.pb.h  TalkingTree.proto  audio_stream_lockless_buffer.h  audio_stream_talking_tree.cpp  audio_stream_talking_tree.h  config.py  register_types.cpp  register_types.h  sdl2_audiocapture.cpp  sdl2_audiocapture.h  talking_tree.cpp  talking_tree.h  talking_tree_enum.h  utils.h  varint.cpp  varint.h
modules/talkingtree_storage/: SCsub  audio_codec.cpp  config.py  (+21 more)
src/: Audio.cpp  Makefile.am  Version_script.in  mumlib.cpp  skeleton.c  skeleton_macros.h  skeleton_private.h  skeleton_query.c  skeleton_vector.c  skeleton_vector.h
tools/: Makefile.am  skeleton-info.c
(+15 files in other folders)
